Fix layout issues

--- a/assets/css/zerotohero.scss
+++ b/assets/css/zerotohero.scss
@@ -22,10 +22,6 @@ body {
   color: #666;
 }
 
-.main {
-  min-height: calc(100vh - 30rem);
-}
-
 h1,
 h2,
 h3,
